--- a/0x02-CSS_advanced/styles/22-style.css
+++ b/0x02-CSS_advanced/styles/22-style.css
@@ -57,6 +57,17 @@ body {
   line-height: var(--line-height-base);
 }
 
+[data-section-theme="dark"] {
+	--text-color: var(--color-white);
+	--section-title-color: var(--color-white);
+	background-color: var(--color-black);
+}
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: var(--font-family-title);
+  font-weight: var(--font-weight-bold);
+}
+
 a:link {
   color: var(--text-color);
   text-decoration: none;
@@ -113,17 +124,13 @@ a:active {
   font-family: var(--font-family-title);
   text-transform: var(--section-tagline-transform);
   font-weight: var(--font-weight-bold);
+  margin: var(--section-tagline-margin);
 }
 
 .container {
   width: 960px;
   margin-left: auto;
   margin-right: auto;
-}
-
-h1,h2,h3,h4,h5,h6 {
-  font-family: var(--font-family-title);
-  font-weight: var(--font-weight-bold);
 }
 
 .navbar-menu {
